hphp/test/slow/modules/module_level_traits_3.php.expectf
Fatal error: Uncaught exception 'ModuleBoundaryViolationException' with message 'Accessing internal function foo in module MLT_B from module MLT_A is not allowed' in %s/module_level_traits_3.inc0:10
Stack trace:
%A
